--- a/style.css
+++ b/style.css
@@ -1,12 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
 body{
     background-color: #eee;
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
+    padding: 0em;
+    margin: 10em;
+    text-align: center;
+}
+
+.date{
+    text-align: left;
+}
+
+.newspaper-container{
+    background-color: white;
 }
 
 h1,
 h2,
 h3 {
-    font-family:cursive
+    font-family:cursive;
+    background-color: white;
 }
 
+nav {
+    background-color: white;
+    padding: 10px;
+    border-bottom: 2px solid #eee;
+    border-top:  2px solid #eee;
+}
+
+nav ul {
+    list-style-type: none;
+    text-align: center;
+}
+
+nav li {
+    display: inline;
+    padding: 20px;
+}
+
+a {
+    color: #777;
+}
