--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 body{
     background-color: #eee;
     font-family:Arial, Helvetica, sans-serif;
-    padding: 0em;
-    margin: 10em;
+    padding: 5px;
+    margin: 25px;
     text-align: center;
+    
 }
 
 .date{
@@ -14,21 +15,24 @@ body{
 .newspaper-container{
     background-color: white;
     width: 700px;
-    border-radius: 10ox;
-    box-shadow: 10px;
+    border-radius: 20px;
+    box-shadow: 10px 5px 5px #ddd;
+    padding: 15px;
+    margin: 10px;
+    
 }
 
 h1{
     font-family: cursive;
     background-color: white;
-    font-size: 100px;
+    font-size: 50px;
     font-weight: bold;
 }
 
 h2 {
     font-family:cursive;
     background-color: white;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 h5 {
@@ -37,39 +41,60 @@ h5 {
 
 nav {
     background-color: white;
-    padding: 0;
+    padding: 1px;
     border-bottom: 2px solid #eee;
     border-top:  2px solid #eee;
-    margin: 10px;
+    margin: 1px;
 }
 
 nav ul {
-    list-style-type: none;
+    list-style-type: inline;
     text-align: center;
 }
 
 nav li {
     display: inline;
-    padding: 20px;
-    padding: 10px;
+    padding: 2.5px;
+    text-align: center;
+    
+    
 }
 
 a {
     color: #777;
     text-decoration: none;
+    font-size: 14px
 }
 
 main {
     text-align: left;
-    margin: 20px;
+    margin: 0x;
 }
 
 img {
     width: 100%;
     height: auto;
     max-width: 100%
+    padding: 1px;
 }
 
 p {
     display:block;
+    text-align: left;
+    padding: 10px;
 }
+
+
+.more-articles {
+    display: inline-flex; /** set the container as flexbox **/
+    align-items: center; /** align all items vertically **/
+    text-align: left;
+    border-top: 2px solid #eee;
+    width: 700px;
+    padding:1px;
+   
+  }
+  
+ 
+  
+  
