--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
 body{
     background-color: #eee;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: source sans pro;
     padding: 5px;
     margin: 25px;
     text-align: center;
@@ -23,19 +23,20 @@ body{
 }
 
 h1{
-    font-family: cursive;
+    font-family: abril flatface;
     background-color: white;
     font-size: 50px;
     font-weight: bold;
 }
 
 h2 {
-    font-family:cursive;
+    font-family: abril flatface;
     background-color: white;
     font-size: 25px;
 }
 
 h5 {
+    font-family: abril flatface;
     color: red
 }
 
@@ -54,7 +55,7 @@ nav ul {
 
 nav li {
     display: inline;
-    padding: 2.5px;
+    padding: 0.5em;
     text-align: center;
     
     
@@ -75,7 +76,7 @@ img {
     width: 100%;
     height: auto;
     max-width: 100%
-    padding: 1px;
+    padding: 0.5em;
 }
 
 p {
@@ -92,6 +93,7 @@ p {
     border-top: 2px solid #eee;
     width: 700px;
     padding:1px;
+    
    
   }
   
