updated nav bar to position sticky so that it stays at top when scrolling.

--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ nav {
     border-bottom: 2px solid #eee;
     border-top:  2px solid #eee;
     margin: 1px;
+    position: sticky;
+    top: 1%;
 }
 
 nav ul {
